[gd_scene load_steps=13 format=2]

[ext_resource path="res://entities/player/player.gd" type="Script" id=1]
[ext_resource path="res://assets/images/player-ship.png" type="Texture" id=2]
[ext_resource path="res://libs/entity_mover/entity_mover.gd" type="Script" id=3]
[ext_resource path="res://libs/input_controller/input_controller.gd" type="Script" id=4]
[ext_resource path="res://entities/player/graphics.gd" type="Script" id=5]
[ext_resource path="res://entities/player/bomb_spawner.gd" type="Script" id=6]
[ext_resource path="res://entities/player/points_manager.gd" type="Script" id=7]
[ext_resource path="res://assets/images/bomb-ready-white.png" type="Texture" id=8]
[ext_resource path="res://assets/sounds/release_bomb.wav" type="AudioStream" id=9]
[ext_resource path="res://assets/sounds/bomb_ready.wav" type="AudioStream" id=10]

[sub_resource type="Animation" id=1]
resource_name = "bomb_ready"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("bomb_ready:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 7 ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 1, 1 )

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]
collision_layer = 8
collision_mask = 8
script = ExtResource( 1 )

[node name="InputController" type="Node" parent="."]
script = ExtResource( 4 )

[node name="EntityMover" type="Node" parent="."]
script = ExtResource( 3 )
move_speed = 80
jump_height = 0
enable_pixel_snap_movement = true
body_path = NodePath("..")

[node name="PointsManager" type="Node" parent="."]
script = ExtResource( 7 )

[node name="SFX" type="Node" parent="."]

[node name="release_bomb_sfx" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 9 )
volume_db = -6.0
bus = "Sound"

[node name="bomb_ready_sfx" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 10 )
bus = "Sound"

[node name="Graphics" type="Node2D" parent="."]
script = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="main" type="Sprite" parent="Graphics"]
texture = ExtResource( 2 )
hframes = 2
__meta__ = {
"_edit_lock_": true
}

[node name="bomb_ready" type="Sprite" parent="Graphics"]
position = Vector2( 0, 16 )
texture = ExtResource( 8 )
hframes = 8
__meta__ = {
"_edit_lock_": true
}

[node name="Effects" type="Node2D" parent="Graphics"]
position = Vector2( 0, 32 )
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Graphics"]
anims/bomb_ready = SubResource( 1 )

[node name="BombSpawner" type="Position2D" parent="."]
position = Vector2( 0, 16 )
script = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="AITimer" type="Timer" parent="."]
one_shot = true
[connection signal="gain_points" from="." to="PointsManager" method="add_points"]
[connection signal="restore_ammo" from="." to="SFX/bomb_ready_sfx" method="play"]
[connection signal="restore_ammo" from="." to="Graphics/AnimationPlayer" method="play" binds= [ "bomb_ready" ]]
[connection signal="spawn_bomb" from="." to="BombSpawner" method="spawn_bomb"]
[connection signal="update_points" from="PointsManager" to="." method="update_points"]
[connection signal="restore_ammo" from="BombSpawner" to="." method="restore_ammo"]
[connection signal="timeout" from="AITimer" to="." method="_on_AITimer_timeout"]
